--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
@@ -25,6 +25,7 @@
     "globals": "^15.15.0",
     "react-router-dom": "^7.5.0",
     "sass": "^1.86.3",
+    "typescript": "^5.8.3",
     "vite": "^6.2.0"
   }
 }
